--- a/ProFrotas - Integration/requirements.txt
+++ b/ProFrotas - Integration/requirements.txt
@@ -1,6 +1,3 @@
-# Dependências do projeto ProFrotas - Abastecimento Processor
-# Arquivo de requisitos para instalação via pip
-
 # Biblioteca para fazer requisições HTTP
 requests>=2.31.0
 
@@ -10,7 +7,7 @@ pandas>=2.0.0
 # Biblioteca para trabalhar com arquivos Excel (necessária para pandas)
 openpyxl>=3.1.0
 
-# Bibliotecas padrão do Python (não precisam ser instaladas)
+# Bibliotecas padrão do Python
 # json - biblioteca padrão
 # typing - biblioteca padrão (Python 3.5+)
 # datetime - biblioteca padrão
